@@ -1,3 +1,5 @@
+- Refactor: New statute type finders for registration
+
 32.11.2 (09-05-2022)
 - Bug Fix: Check if ingression code already exists
 
